# baresip

./: .clangd  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  COMMEND.md  CONAN_ARTIFACTORY_SETUP.md  CONAN_QUICK_START.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  TODO_commend  bitbucket-pipelines.yml  commend-build.sh  conanbuild.sh  conanbuildenv-release-armv8.sh  conandata.yml  conanfile.py  conanprofile.txt  conanrun.sh  conanrunenv-release-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  deactivate_conanrunenv-release-armv8.sh  deps.html  gen_static_mod_import.sh  sipfront-build-inside-setup.sh  sipfront-build-setup.sh  test-conan-integration.sh  test-video-call.sh
cmake/: FindAAC.cmake  FindAAUDIO.cmake  FindALSA.cmake  FindAMR.cmake  FindAOM.cmake  FindAPTX.cmake  FindCAMERAD.cmake  FindCODEC2.cmake  FindDIRECTFB.cmake  FindFFMPEG.cmake  FindFFmpeg.cmake  FindFVAD.cmake  FindG7221.cmake  FindGIO.cmake  FindGLIB.cmake  FindGSM.cmake  FindGST.cmake  FindGTK3.cmake  FindGZRTP.cmake  FindJACK.cmake  FindLIBG722.cmake  FindMBEDTLS.cmake  FindMBEDTLSSO.cmake  FindMOSQUITTO.cmake  FindMPA.cmake  FindMosquitto.cmake  FindOGG.cmake  FindOPENSLES.cmake  FindOPUS.cmake  FindPIPEWIRE.cmake  FindPNG.cmake  FindPORTAUDIO.cmake  FindPULSE.cmake  FindRE.cmake  FindREM.cmake  FindSDL.cmake  FindSNDFILE.cmake  FindSPANDSP.cmake  FindSPEEX.cmake  FindV4L2.cmake  (+7 more)
debian/: baresip.cmake-components  changelog  control  copyright  dirs  docs  libbaresip-dev.dirs  libbaresip-dev.files  libbaresip.files  rules
docs/: CONAN_ARTIFACTORY_SETUP.md  CONAN_INTEGRATION.md  CONTRIBUTING.md  COPYING  ChangeLog  README  THANKS  TODO  contributing.md
include/: baresip.h
mk/: CMakeLists.txt  Doxyfile  defines.cmake  mod.mk  modules.mk  test.cmake
mk/cmake_modules/: FindOpus.cmake
mk/symbian/: baresip.mmp  baresip_gcce.pkg  baresip_reg.rss  baresip_thumb.pkg  bld.inf  ecrt.cpp  mod.cpp  static.c
mk/win32/: baresip-tests.vcxproj  baresip-tests.vcxproj.filters  baresip.sln  baresip.vcproj  baresip.vcxproj  baresip.vcxproj.filters  static.c
mk/win32/include/: qedit.h
modules/aac/: CMakeLists.txt  aac.c  aac.h  decode.c  encode.c  module.mk  sdp.c
modules/aaudio/: CMakeLists.txt  aaudio.c  aaudio.h  player.c  recorder.c  utils.c
modules/alsa/: CMakeLists.txt  alsa.c  alsa.h  alsa_play.c  alsa_src.c  module.mk
modules/alsa_audiocore/: CMakeLists.txt  alsa_ac.c  alsa_ac_play.c  alsa_ac_src.c  alsa_audiocore.c  alsa_audiocore.h  audiocore.c
modules/amr/: CMakeLists.txt  amr.c  amr.h  module.mk  sdp.c
modules/aptx/: CMakeLists.txt  aptx.c  aptx.h  decode.c  encode.c  module.mk  sdp.c
modules/audiounit/: CMakeLists.txt  audiounit.c  audiounit.h  module.mk  player.c  recorder.c  sess.c
modules/auogg/: CMakeLists.txt  auogg.c
modules/ausine/: CMakeLists.txt  ausine.c  module.mk
modules/av1/: CMakeLists.txt  av1.c  av1.h  decode.c  encode.c  module.mk  obu.c
modules/avcapture/: CMakeLists.txt  avcapture.m  module.mk
modules/avcodec/: .encode.c.swp  CMakeLists.txt  avcodec.c  avcodec.h  decode.c  encode.c  h263.c  h264.c  h265.c  h26x.h  module.mk  sdp.c
modules/avcodec/parse/: bs.c  bs.h  h2645_parse.h  h2645_util.c  h2645_util.h  h264_parse.c  h265_parse.c
modules/avfilter/: CMakeLists.txt  avfilter.c  avfilter.h  filter.c  module.mk  util.c  util.h
modules/avformat/: CMakeLists.txt  audio.c  avf.c  avformat.c  mod_avformat.h  module.mk  video.c
modules/codec2/: CMakeLists.txt  codec2.c  module.mk
modules/comvideo/: CMakeLists.txt  comvideo.c  comvideo.h  decode_h264.c  encode_h264.c  sdp.c
modules/coreaudio/: CMakeLists.txt  coreaudio.c  coreaudio.h  module.mk  player.c  recorder.c
modules/ctrl_dbus/: .gitignore  CMakeLists.txt  baresipbus.c  baresipbus.h  com.creytiv.Baresip.xml  com.github.Baresip.xml  ctrl_dbus.c  ctrl_dbus.html  gen.sh  gencode.sh  gendoc.sh  module.mk
modules/ctrl_tcp/: CMakeLists.txt  ctrl_tcp.c  module.mk  netstring.c  netstring.h  tcp_netstring.c  tcp_netstring.h
modules/ctrl_tcp/netstring/: makefile  netstring.c  netstring.h  testsuite.c
modules/ctrl_tcp/netstring-c/: netstring.c  netstring.h
modules/directfb/: CMakeLists.txt  directfb.c  module.mk
modules/dshow/: CMakeLists.txt  dshow.cpp  module.mk
modules/dtls_srtp/: CMakeLists.txt  dtls.c  dtls_srtp.c  dtls_srtp.h  module.mk  srtp.c  tls_udp.c
modules/evdev/: CMakeLists.txt  evdev.c  module.mk  print.c  print.h
modules/g722/: CMakeLists.txt  g722.c  module.mk
modules/g7221/: CMakeLists.txt  decode.c  encode.c  g7221.c  g7221.h  module.mk  sdp.c
modules/g726/: CMakeLists.txt  g726.c  module.mk
packaging/: CMakeLists.txt  libbaresip.pc.in
rem_patch/: nv12-nv21_to_rgb32.patch
rpm/: baresip.spec
sbom/: sbom.cdx.json
scripts/: setup-conan-repo.sh  upload-libre.sh
share/: com.github.baresip.desktop
src/: account.c  aucodec.c  audio.c  audio.h  aufilt.c  auframe.c  aulevel.c  auplay.c  aureceiver.c  ausrc.c  baresip.c  bevent.c  bfcp.c  bundle.c  call.c  cmd.c  conf.c  config.c  contact.c  core.h  cparam.c  custom_hdrs.c  descr.c  dial_number.c  dtmf.c  dtmf.h  event.c  (+45 more)
test/: CMakeLists.txt  account.c  aufile.c  aulevel.c  ausrc.c  bevent.c  call.c  call.h  call_cancelrule.c  call_fixture.c  ccheck.py  cmd.c  contact.c  cparam.c  cplusplus.cpp  dial_number.c  event.c  h264.c  jbuf.c  jbuf_gnack.c  l16.c  main.c  menu.c  message.c  mos.c  net.c  parse.c  peerconn.c  play.c  sip_server.c  srcs.mk  stunuri.c  test.c  test.h  test_invariant_wincons.c  twcc.c  ua.c  video.c
test/data/sip/: invite.sip
test/data/sni/: client-interm.pem  other-cert.pem  root-ca.pem  server-interm.pem
test/mock/: cert.c  dnssrv.c  mock_aucodec.c  mock_aufilt.c  mock_auplay.c  mock_ausrc.c  mock_menc.c  mock_mnat.c  mock_vidcodec.c  mock_vidisp.c  mock_vidsrc.c  sipsrv.c
test/sip/: aor.c  auth.c  domain.c  location.c  sipsrv.c  sipsrv.h  user.c
webrtc/: .gitignore  CMakeLists.txt  LICENSE  README.md
webrtc/cmake/: FindBARESIP.cmake
webrtc/src/: demo.c  demo.h  main.c  sess.c
webrtc/www/: index.html
webrtc/www/js/: main.js
(+607 files in other folders)
